katars/tests/snaps/snapshots/snap_errors__try_non_opt.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let x = 42?\")"
---
Error: ? requires an Opt[T] or Res[T, E] value
   ╭─[<test>:1:9]
   │
 1 │ let x = 42?
   │         ─┬─  
   │          ╰─── ? requires an Opt[T] or Res[T, E] value
───╯
